[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["StarHeartHunt <starheart233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
